--- a/src/app/categoria/actualizar-categoria/actualizar-categoria.component.html
+++ b/src/app/categoria/actualizar-categoria/actualizar-categoria.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Actualizar Cliente</h2>
+<h2 mat-dialog-title>Actualizar Categoria</h2>
 
 <mat-dialog-content [formGroup]="form">
     <mat-form-field class="crear-cliente-field">
