listar tablas, eliminar y actualizar

--- a/src/app/categoria/actualizar-categoria/actualizar-categoria.component.html
+++ b/src/app/categoria/actualizar-categoria/actualizar-categoria.component.html
@@ -2,7 +2,7 @@
 
 <mat-dialog-content [formGroup]="form">
     <mat-form-field class="crear-cliente-field">
-        <input matInput placeholder="Nombre de la categoria" formControlName="nombres">
+        <input matInput placeholder="Nombre de la categoria" formControlName="nombre">
     </mat-form-field>
     <br/>
     <mat-form-field class="crear-cliente-field">
