--- a/src/app/lugar/listar/listar.component.html
+++ b/src/app/lugar/listar/listar.component.html
@@ -1,6 +1,7 @@
 <div class="contenedor">
     <div class="contenedor-item">
         <h1> Listado de Lugares</h1>
+        <button [routerLink]="['../crear']" mat-raised-button color="primary">N U E V O</button>
     </div>
 
     <div *ngIf="resultados">
