--- a/src/app/categoria/listar/listar.component.html
+++ b/src/app/categoria/listar/listar.component.html
@@ -1,6 +1,7 @@
 <div class="contenedor">
   <div class="contenedor-item">
       <h1> Listado de Categorias</h1>
+      <button [routerLink]="['../crear']" mat-raised-button color="primary">N U E V O</button>
   </div>
 
   <div *ngIf="resultados">
@@ -25,10 +26,14 @@
                 <button (click)="actualizarCategoria(element)" mat-raised-button color="primary">
                   <b><mat-icon color="white">edit</mat-icon></b>
                 </button>
-                  <button [routerLink]="['eliminar/', element.id]" mat-raised-button color="warn">
+                <button [routerLink]="['../eliminar', element.id]" mat-raised-button color="warn">
                     <b><mat-icon color="white">delete</mat-icon></b>
-                  </button>
-              </td>
+                </button> 
+              
+              
+              
+              
+                </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
