--- a/src/app/lugar/eliminar/eliminar.component.html
+++ b/src/app/lugar/eliminar/eliminar.component.html
@@ -1,1 +1,21 @@
-<p>eliminar works!</p>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>Esta seguro de eliminar este lugar?</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <mat-list>
+            <mat-list-item>
+                <b>Nombre: {{lugar.nombre}}</b>
+            </mat-list-item>
+            <mat-divider></mat-divider>
+            <mat-list-item>
+                <b>Estado: {{lugar.nombre}}</b>
+            </mat-list-item>
+            <mat-divider></mat-divider>
+        </mat-list>            
+    </mat-card-content>
+    <mat-card-actions>
+<button mat-flat-button (click)="cancel()">Cancelar</button>
+<button mat-raised-button color="warn" (click)="confirmar()">Confirmar</button>
+    </mat-card-actions>
+</mat-card>
