--- a/src/app/lugar/actualizar-lugar/actualizar-lugar.component.html
+++ b/src/app/lugar/actualizar-lugar/actualizar-lugar.component.html
@@ -6,23 +6,33 @@
     </mat-form-field>
     <br/>
     <mat-form-field class="crear-lugar-field">
-        <input matInput placeholder="Descripción" formControlName="descripción">
+        <input matInput placeholder="Descripción" formControlName="descripcion">
     </mat-form-field>
     <br/>
     <mat-form-field class="crear-lugar-field">
         <input matInput placeholder="Gasto Aproximado" formControlName="gastoAproximado">
     </mat-form-field>
     <br/>
-    <mat-form-field class="crear-lugar-field">
-        <input matInput placeholder="Imagen" formControlName="Imagen">
+    <mat-form-field class="crear-lugar-field">  
+        <input matInput placeholder="Imagen" formControlName="imagen">
     </mat-form-field>
     <br/>
     <mat-form-field class="crear-lugar-field">
-        <input matInput placeholder="Pais" formControlName="pais">
-    </mat-form-field>
+        <mat-select>
+            
+        </mat-select>
+          
+          <input matInput placeholder="Pais" formControlName="pais">            
+        
+
+    </mat-form-field>   
     <br/>
     <mat-form-field class="crear-lugar-field">
-        <input matInput placeholder="Categoria" formControlName="categoria">
+        <mat-select>
+            
+        </mat-select>
+        
+        <input matInput placeholder="Categoria" formControlName="categoria">            
     </mat-form-field>
 
 </mat-dialog-content>
