--- a/src/app/lugar/eliminar/eliminar.component.html
+++ b/src/app/lugar/eliminar/eliminar.component.html
@@ -1,3 +1,4 @@
+<div class=""></div>
 <mat-card>
     <mat-card-header>
         <mat-card-title>Esta seguro de eliminar este lugar?</mat-card-title>
@@ -9,9 +10,24 @@
             </mat-list-item>
             <mat-divider></mat-divider>
             <mat-list-item>
-                <b>Estado: {{lugar.nombre}}</b>
+                <b>Descripcion: {{lugar.descripcion}}</b>
             </mat-list-item>
             <mat-divider></mat-divider>
+            <mat-list-item>
+                <b>Gasto Aproximado: {{lugar.gastoAproximado}}</b>
+            </mat-list-item>
+            <mat-divider></mat-divider>
+            <mat-list-item>
+                <b>imagen: {{lugar.imagen}}</b>
+            </mat-list-item>
+            <mat-divider></mat-divider>
+            <mat-list-item>
+                <b>Pais: {{lugar.pais}}</b>
+            </mat-list-item>
+            <mat-divider></mat-divider>
+            <mat-list-item>
+                <b>Categoria: {{lugar.categoria}}</b>
+            </mat-list-item>
         </mat-list>            
     </mat-card-content>
     <mat-card-actions>
