--- a/src/app/pais/actualizar-pais/actualizar-pais.component.html
+++ b/src/app/pais/actualizar-pais/actualizar-pais.component.html
@@ -5,9 +5,7 @@
         <input matInput placeholder="Nombre del pais" formControlName="nombre">
     </mat-form-field>
     <br/>
-    <mat-form-field class="crear-pais-field">
-        <input matInput placeholder="Estado" formControlName="estado">
-    </mat-form-field>
+    <mat-checkbox  formControlName="estado">Estado</mat-checkbox>
     <br/>
 </mat-dialog-content>
 
