--- a/src/app/pais/eliminar/eliminar.component.html
+++ b/src/app/pais/eliminar/eliminar.component.html
@@ -1,3 +1,4 @@
+<div class="crear-pais-form">
 <mat-card>
     <mat-card-header>
         <mat-card-title>Esta seguro de eliminar esta pais?</mat-card-title>
@@ -19,3 +20,5 @@
 <button mat-raised-button color="warn" (click)="confirmar()">Confirmar</button>
     </mat-card-actions>
 </mat-card>
+
+</div>
