--- a/src/app/categoria/eliminar/eliminar.component.html
+++ b/src/app/categoria/eliminar/eliminar.component.html
@@ -1,3 +1,4 @@
+<div class="crear-categoria-form">
 <mat-card>
     <mat-card-header>
         <mat-card-title>Esta seguro de eliminar esta categoria?</mat-card-title>
@@ -19,3 +20,4 @@
 <button mat-raised-button color="warn" (click)="confirmar()">Confirmar</button>
     </mat-card-actions>
 </mat-card>
+</div>
