--- a/src/app/lugar/listar/listar.component.html
+++ b/src/app/lugar/listar/listar.component.html
@@ -48,7 +48,7 @@
                   <button (click)="actualizarLugar(element)" mat-raised-button color="primary">
                     <b><mat-icon color="white">edit</mat-icon></b>
                   </button>
-                    <button [routerLink]="['eliminar/', element.id]" mat-raised-button color="warn">
+                    <button [routerLink]="['../eliminar/', element.id]" mat-raised-button color="warn">
                       <b><mat-icon color="white">delete</mat-icon></b>
                     </button>
                 </td>
